[gd_scene load_steps=9 format=3 uid="uid://dfeupumuax17r"]

[ext_resource type="Script" uid="uid://cxl0vrsowm4ec" path="res://src/level/activity/garapon/garapon_activity.gd" id="1_mwmut"]
[ext_resource type="PackedScene" uid="uid://bmvifaq5bnx8m" path="res://src/level/activity/garapon/handle.tscn" id="2_pq3xv"]
[ext_resource type="AudioStream" uid="uid://b5q40pintgxko" path="res://assets/audio/SFX/Env/minigame/sfx_gameplay_Env_garaponspin_FD1.ogg" id="3_pidpd"]

[sub_resource type="Gradient" id="Gradient_xerm5"]
colors = PackedColorArray(0, 1, 0.901961, 0.501961, 1, 0.737255, 1, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mwmut"]
gradient = SubResource("Gradient_xerm5")
width = 192
height = 192

[sub_resource type="Gradient" id="Gradient_pidpd"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h70d1"]
gradient = SubResource("Gradient_pidpd")
height = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq3xv"]
size = Vector2(192, 192)

[node name="GaraponActivity" type="Node2D"]
script = ExtResource("1_mwmut")

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_mwmut")
metadata/_edit_lock_ = true

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(0, 57)
texture = SubResource("GradientTexture2D_h70d1")

[node name="Handle" parent="." instance=ExtResource("2_pq3xv")]
rotation = 2.03156

[node name="MouseDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetector"]
shape = SubResource("RectangleShape2D_pq3xv")
debug_color = Color(0.431373, 0.352941, 1, 0.501961)

[node name="MarbleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pidpd")

[connection signal="revolved" from="Handle" to="." method="_on_handle_revolved"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_mouse_detector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_mouse_detector_mouse_exited"]
